objects/LLC_BI__External_Application_Lookup__c.object
<CustomObject>
    <description>The External Application Lookup object is used to identify external applications using a Context Id, and a External Id.</description>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>This is an optional field. This field indicates the ID of the SalesForce record that is tied to the external system ID.</description>
        <externalId>true</externalId>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Id__c</fullName>
        <description>This is a required field. This field stores the value of the external system ID.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Source_Id__c</fullName>
        <description>The system automatically populates this text field to indicate the identification code of the indirect source of origination within the context of an external system. By default, this field is blank.</description>
        <inlineHelpText>This field displays the identification code of the indirect source of origination within the external system.</inlineHelpText>
        <label>External Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Transaction_Id__c</fullName>
        <description>The system automatically populates this string field to capture the incoming application&apos;s external transaction ID. By default, this field is blank.</description>
        <inlineHelpText>This auto-populated field contains the application&apos;s external transaction ID.</inlineHelpText>
        <label>External Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Source__c</fullName>
        <description>The system automatically populates this text field to capture an external application&apos;s system name.</description>
        <inlineHelpText>This field contains an external application&apos;s system name.</inlineHelpText>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External Application Lookup</label>
    <nameField>
        <label>External Application Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Application Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>